--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-syslog-ng (3.8.0alpha0-14) experimental; urgency=low
+syslog-ng (3.8.0beta1-1) experimental; urgency=low
 
   [ Laszlo Budai <laszlo.budai@balabit.com> ]
-  * 3.8.0 alpha release
+  * 3.8.0beta1 release 1st revision
 
- -- Laszlo Budai <laszlo.budai@balabit.com>  Sat, 02 Jul 2016 12:23:33 +0200
+ -- Laszlo Budai <laszlo.budai@balabit.com>  Thu, 28 Jul 2016 13:14:59 +0200
